handle logic fee rule

--- a/src/main/resources/templates/adminDashBoard/fragments/courseMaintenanceContent.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/courseMaintenanceContent.html
@@ -240,8 +240,7 @@
                                                    name="maintenanceFee" th:value="${fee.maintenanceFee}">
                                         </td>
                                         <td>
-                                            <button type="submit" class="btn btn-primary btn-sm save-btn" 
-                                                    th:style="${fee.maxEnrollments == null ? 'display: none;' : ''}">
+                                            <button type="submit" class="btn btn-primary btn-sm save-btn">
                                                 <i class="fas fa-save"></i>
                                             </button>
                                             <button type="button" class="btn btn-danger btn-sm delete-btn" 
