Refactor course retrieval methods to use Long for categoryId and update query logic; enhance main content fragment handling in templates

--- a/src/main/resources/templates/homePage/index.html
+++ b/src/main/resources/templates/homePage/index.html
@@ -12,7 +12,7 @@
 	<!-- Header END -->
 
 	<!-- **************** MAIN CONTENT START **************** -->
-	<div th:replace="~{homePage/fragments/mainContent :: mainContent}"></div>
+	<div th:replace="~{__${fragmentContent}__}"></div>
 	<!-- **************** MAIN CONTENT END **************** -->
 
 	<!-- =======================
