--- a/src/main/resources/templates/homePage/fragments/mainCourseGrid.html
+++ b/src/main/resources/templates/homePage/fragments/mainCourseGrid.html
@@ -15,7 +15,8 @@
                     <p class="mb-2 text-truncate-2" th:text="${course.description}"></p>
                     <ul class="list-inline mb-0">
                         <li class="list-inline-item me-0 small"><i class="fas fa-star text-warning"></i></li>
-                        <li class="list-inline-item ms-2 h6 fw-light mb-0" th:text="${course.courseReviews.size()} + ' Ratings'">
+                        <li class="list-inline-item ms-2 h6 fw-light mb-0"
+                            th:text="${course.courseReviews.size()} + ' Ratings'">
                             4.0/5.0</li>
                     </ul>
                 </div>
@@ -37,13 +38,14 @@
     </div>
 
     <!-- Pagination (AJAX-friendly) -->
-    <div class="col-12 mt-4 d-flex justify-content-center">
+    <!-- Chỉ hiển thị phân trang nếu có nhiều hơn 1 trang -->
+    <div th:if="${totalPages >= 1}" class="col-12 mt-4 d-flex justify-content-center">
         <nav aria-label="navigation">
             <ul class="pagination pagination-primary-soft d-inline-block d-md-flex rounded mb-0">
 
                 <!-- Nút Previous -->
                 <li class="page-item" th:classappend="${currentPage == 0} ? 'disabled'">
-                    <a class="page-link pagination-link" href="#" data-page="${currentPage - 1}">
+                    <a class="page-link pagination-link" href="#" th:attr="data-page=${currentPage - 1}">
                         <i class="fas fa-angle-double-left"></i>
                     </a>
                 </li>
@@ -56,7 +58,7 @@
 
                 <!-- Nút Next -->
                 <li class="page-item" th:classappend="${currentPage + 1 >= totalPages} ? 'disabled'">
-                    <a class="page-link pagination-link" href="#" data-page="${currentPage + 1}">
+                    <a class="page-link pagination-link" href="#" th:attr="data-page=${currentPage + 1}">
                         <i class="fas fa-angle-double-right"></i>
                     </a>
                 </li>
@@ -64,5 +66,6 @@
             </ul>
         </nav>
     </div>
+
 
 </div>
