--- a/src/main/resources/templates/homePage/fragments/mainCourseGrid.html
+++ b/src/main/resources/templates/homePage/fragments/mainCourseGrid.html
@@ -37,6 +37,15 @@
         </div>
     </div>
 
+    <!-- Nếu không có khóa học -->
+    <div class="col-12 mt-7" th:if="${#lists.isEmpty(courses)}">
+        <div class="text-center text-muted py-5">
+            <i class="fas fa-book fa-3x mb-3 opacity-50"></i>
+            <h5>No courses found</h5>
+
+        </div>
+    </div>
+
     <!-- Pagination (AJAX-friendly) -->
     <!-- Chỉ hiển thị phân trang nếu có nhiều hơn 1 trang -->
     <div th:if="${totalPages >= 1}" class="col-12 mt-4 d-flex justify-content-center">
