--- a/src/main/resources/templates/userPage/fragmentLessonVideo/mainContentLessonVideo.html
+++ b/src/main/resources/templates/userPage/fragmentLessonVideo/mainContentLessonVideo.html
@@ -9,9 +9,9 @@
             <div class="col-lg-9">
                 <div class="video-player rounded-3">
                     <video controls crossorigin="anonymous" playsinline poster="/assets/images/videos/poster.jpg">
-                        <source th:src="${lessonVideoURL}" size="360">
-                        <source th:src="${lessonVideoURL}" size="720">
-                        <source th:src="${lessonVideoURL}" size="1080">
+                        <source th:src="@{/api/video/stream/video/{videoURL}(videoURL=${lessonVideoURL})}" size="360">
+                        <source th:src="@{/api/video/stream/video/{videoURL}(videoURL=${lessonVideoURL})}" size="720">
+                        <source th:src="@{/api/video/stream/video/{videoURL}(videoURL=${lessonVideoURL})}" size="1080">
                         <!-- Caption files -->
                         <track kind="captions" label="English" srclang="en" src="/assets/images/videos/en.vtt" default>
                         <track kind="captions" label="French" srclang="fr" src="/assets/images/videos/fr.vtt">
