--- a/src/main/resources/templates/userPage/fragments/navHeader.html
+++ b/src/main/resources/templates/userPage/fragments/navHeader.html
@@ -1,4 +1,3 @@
-
 <!-- Header START -->
 <header th:fragment="navHeader" class="navbar-light navbar-sticky">
     <!-- Nav START -->
@@ -13,13 +12,13 @@
 
             <!-- Responsive navbar toggler -->
             <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
-                    aria-label="Toggle navigation">
-					<span class="navbar-toggler-animation">
-						<span></span>
-						<span></span>
-						<span></span>
-					</span>
+                data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-animation">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </span>
             </button>
 
             <!-- Main navbar START -->
@@ -30,10 +29,10 @@
                         <div class="nav-item w-100">
                             <form class="rounded position-relative">
                                 <input class="form-control pe-5 bg-secondary bg-opacity-10 border-0" type="search"
-                                       placeholder="Search" aria-label="Search">
+                                    placeholder="Search" aria-label="Search">
                                 <button
-                                        class="btn btn-link bg-transparent px-2 py-0 position-absolute top-50 end-0 translate-middle-y"
-                                        type="submit"><i class="fas fa-search fs-6 text-primary"></i></button>
+                                    class="btn btn-link bg-transparent px-2 py-0 position-absolute top-50 end-0 translate-middle-y"
+                                    type="submit"><i class="fas fa-search fs-6 text-primary"></i></button>
                             </form>
                         </div>
                     </div>
@@ -45,8 +44,7 @@
                     <!-- Nav item 1 Demos -->
                     <li class="nav-item dropdown"><a class="nav-link" href="#">Certificate</a></li>
 
-                    <!-- Nav item 2 Eduport Business -->
-                    <li class="nav-item dropdown"><a class="nav-link" href="#">My courses</a></li>
+
 
                     <!-- Nav item 3 My learning -->
                     <li class="nav-item"><a class="nav-link active" href="#">My learning</a></li>
@@ -68,7 +66,7 @@
                 <li class="nav-item ms-2 ms-sm-3 dropdown">
                     <!-- Notification button -->
                     <a class="btn btn-light btn-round mb-0" href="#" role="button" data-bs-toggle="dropdown"
-                       aria-expanded="false" data-bs-auto-close="outside">
+                        aria-expanded="false" data-bs-auto-close="outside">
                         <i class="bi bi-bell fa-fw"></i>
                     </a>
                     <!-- Notification dote -->
@@ -76,10 +74,10 @@
 
                     <!-- Notification dropdown menu START -->
                     <div
-                            class="dropdown-menu dropdown-animation dropdown-menu-end dropdown-menu-size-md p-0 shadow-lg border-0">
+                        class="dropdown-menu dropdown-animation dropdown-menu-end dropdown-menu-size-md p-0 shadow-lg border-0">
                         <div class="card bg-transparent">
                             <div
-                                    class="card-header bg-transparent border-bottom py-4 d-flex justify-content-between align-items-center">
+                                class="card-header bg-transparent border-bottom py-4 d-flex justify-content-between align-items-center">
                                 <h6 class="m-0">Notifications <span
                                         class="badge bg-danger bg-opacity-10 text-danger ms-2">2 new</span></h6>
                                 <a class="small" href="#">Clear all</a>
@@ -88,12 +86,11 @@
                                 <ul class="list-group list-unstyled list-group-flush">
                                     <!-- Notif item -->
                                     <li>
-                                        <a href="#"
-                                           class="list-group-item-action border-0 border-bottom d-flex p-3">
+                                        <a href="#" class="list-group-item-action border-0 border-bottom d-flex p-3">
                                             <div class="me-3">
                                                 <div class="avatar avatar-md">
                                                     <img class="avatar-img rounded-circle"
-                                                         src="assets/images/avatar/03.jpg" alt="avatar">
+                                                        src="assets/images/avatar/03.jpg" alt="avatar">
                                                 </div>
                                             </div>
                                             <div>
@@ -120,8 +117,8 @@
                 <li class="nav-item ms-3 dropdown">
                     <!-- Avatar -->
                     <a class="avatar avatar-sm p-0" href="#" id="profileDropdown" role="button"
-                       data-bs-auto-close="outside" data-bs-display="static" data-bs-toggle="dropdown"
-                       aria-expanded="false">
+                        data-bs-auto-close="outside" data-bs-display="static" data-bs-toggle="dropdown"
+                        aria-expanded="false">
                         <img class="avatar-img rounded-circle" src="assets/images/avatar/01.jpg" alt="avatar">
                     </a>
 
@@ -134,7 +131,7 @@
                                 <!-- Avatar -->
                                 <div class="avatar me-3">
                                     <img class="avatar-img rounded-circle shadow" src="assets/images/avatar/01.jpg"
-                                         alt="avatar">
+                                        alt="avatar">
                                 </div>
                                 <div>
                                     <a class="h6" href="#" th:text="${user.username}">Lori Ferguson</a>
@@ -148,9 +145,9 @@
                             <hr class="dropdown-divider">
                         </li>
                         <li><a class="dropdown-item" href="#"><i class="bi bi-person fa-fw me-2"></i>Edit
-                            Profile</a></li>
+                                Profile</a></li>
                         <li><a class="dropdown-item" href="#"><i class="bi bi-gear fa-fw me-2"></i>Account
-                            Settings</a></li>
+                                Settings</a></li>
                         <li><a class="dropdown-item" href="#"><i class="bi bi-info-circle fa-fw me-2"></i>Help</a>
                         </li>
                         <li>
@@ -165,30 +162,28 @@
                         <!-- Dark mode options START -->
                         <li>
                             <div
-                                    class="bg-light dark-mode-switch theme-icon-active d-flex align-items-center p-1 rounded mt-2">
+                                class="bg-light dark-mode-switch theme-icon-active d-flex align-items-center p-1 rounded mt-2">
                                 <button type="button" class="btn btn-sm mb-0" data-bs-theme-value="light">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                         fill="currentColor" class="bi bi-sun fa-fw mode-switch" viewBox="0 0 16 16">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                        class="bi bi-sun fa-fw mode-switch" viewBox="0 0 16 16">
                                         <path
-                                                d="M8 11a3 3 0 1 1 0-6 3 3 0 0 1 0 6zm0 1a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z" />
+                                            d="M8 11a3 3 0 1 1 0-6 3 3 0 0 1 0 6zm0 1a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z" />
                                         <use href="#"></use>
                                     </svg> Light
                                 </button>
                                 <button type="button" class="btn btn-sm mb-0" data-bs-theme-value="dark">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                         fill="currentColor" class="bi bi-moon-stars fa-fw mode-switch"
-                                         viewBox="0 0 16 16">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                        class="bi bi-moon-stars fa-fw mode-switch" viewBox="0 0 16 16">
                                         <path
-                                                d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278zM4.858 1.311A7.269 7.269 0 0 0 1.025 7.71c0 4.02 3.279 7.276 7.319 7.276a7.316 7.316 0 0 0 5.205-2.162c-.337.042-.68.063-1.029.063-4.61 0-8.343-3.714-8.343-8.29 0-1.167.242-2.278.681-3.286z" />
+                                            d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278zM4.858 1.311A7.269 7.269 0 0 0 1.025 7.71c0 4.02 3.279 7.276 7.319 7.276a7.316 7.316 0 0 0 5.205-2.162c-.337.042-.68.063-1.029.063-4.61 0-8.343-3.714-8.343-8.29 0-1.167.242-2.278.681-3.286z" />
                                         <path
-                                                d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z" />
+                                            d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z" />
                                         <use href="#"></use>
                                     </svg> Dark
                                 </button>
                                 <button type="button" class="btn btn-sm mb-0 active" data-bs-theme-value="auto">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                         fill="currentColor" class="bi bi-circle-half fa-fw mode-switch"
-                                         viewBox="0 0 16 16">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                        class="bi bi-circle-half fa-fw mode-switch" viewBox="0 0 16 16">
                                         <path d="M8 15A7 7 0 1 0 8 1v14zm0 1A8 8 0 1 1 8 0a8 8 0 0 1 0 16z" />
                                         <use href="#"></use>
                                     </svg> Auto
@@ -213,8 +208,8 @@
 
             <!-- Responsive navbar toggler -->
             <button class="navbar-toggler m-auto w-100" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarCollapse2" aria-controls="navbarCollapse2" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                data-bs-target="#navbarCollapse2" aria-controls="navbarCollapse2" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <i class="bi bi-grid-fill"></i> Category
             </button>
 
@@ -223,8 +218,9 @@
                 <!-- Nav Main menu START -->
                 <ul class="navbar-nav navbar-nav-scroll mx-auto">
 
-                    <li class="nav-item" th:each="category : ${categories}"><a class="nav-link" th:href="@{'/home/coursesGrid'(categoryIds=${category.id})}"
-                                                                               th:text="${category.name}">Finance & Accounting</a></li>
+                    <li class="nav-item" th:each="category : ${categories}"><a class="nav-link"
+                            th:href="@{'/home/coursesGrid'(categoryIds=${category.id})}"
+                            th:text="${category.name}">Finance & Accounting</a></li>
 
 
                 </ul>
