--- a/src/main/resources/templates/userPage/fragments/trendingCourse.html
+++ b/src/main/resources/templates/userPage/fragments/trendingCourse.html
@@ -22,7 +22,7 @@
 
         <div class="row g-4">
             <!-- Card START -->
-            <div class="col-md-6 col-xl-4">
+            <div class="col-md-6 col-xl-4" th:each="course : ${courseByUser}">
                 <div class="card shadow-hover overflow-hidden bg-transparent">
                     <div class="position-relative">
                         <!-- Image -->
@@ -40,8 +40,10 @@
                                     </div>
                                     <!-- Avatar info -->
                                     <div>
-                                        <h6 class="mb-0"><a href="#" class="text-dark">Larry Lawson</a></h6>
-                                        <span class="small">Tutor</span>
+                                        <h6 class="mb-0"><a href="#" class="text-dark"
+                                                th:text="${course.instructor.username}">Larry Lawson</a></h6>
+                                        <span class="small"
+                                            th:text="${course.instructor.personalSkill}">Instructor</span>
                                     </div>
                                 </div>
                             </div>
@@ -52,174 +54,57 @@
                         <!-- Badge and icon -->
                         <div class="d-flex justify-content-between mb-3">
                             <div class="hstack gap-2">
-                                <a href="#" class="badge bg-orange bg-opacity-10 text-orange">All level</a>
-                                <a href="#" class="badge text-bg-dark">6 month</a>
+                                <a href="#" class="badge bg-orange bg-opacity-10 text-orange"
+                                    th:utext="${course.courseLevel}">All level</a>
+                                <a href="#" class="badge text-bg-dark" th:utext="${course.duration/3600 +'h'}">6
+                                    month</a>
                             </div>
-                            <a href="#" class="h6 fw-light mb-0"><i class="far fa-bookmark"></i></a>
+
                         </div>
                         <!-- Title -->
-                        <h5 class="card-title"><a href="#">The Complete Digital Marketing Course - 12 Courses in
+                        <h5 class="card-title"><a th:href="@{/learning/course/view(courseId=${course.courseId})}"
+                                th:text="${course.title}">The Complete Digital Marketing
+                                Course - 12 Courses in
                                 1</a></h5>
                         <!-- Rating -->
-                        <ul class="list-inline">
-                            <li class="list-inline-item h6 fw-light mb-0">4.5</li>
-                            <li class="list-inline-item me-0 small"><i class="fas fa-star text-warning"></i>
-                            </li>
-                            <li class="list-inline-item me-0 small"><i class="fas fa-star text-warning"></i>
-                            </li>
-                            <li class="list-inline-item me-0 small"><i class="fas fa-star text-warning"></i>
-                            </li>
-                            <li class="list-inline-item me-0 small"><i class="fas fa-star text-warning"></i>
-                            </li>
-                            <li class="list-inline-item me-0 small"><i class="fas fa-star-half-alt text-warning"></i>
-                            </li>
-                            <li class="list-inline-item ms-2 text-reset">(6,500)</li>
+                        <ul class="list-inline mb-0">
+                            <li class="list-inline-item h6 fw-light mb-0"
+                                th:text="${#numbers.formatDecimal(course.averageRating, 1, 1)}">4.5</li>
+                            <th:block th:if="${course.averageRating > 0}">
+                                <li class="list-inline-item me-0 small"
+                                    th:each="star : ${#numbers.sequence(1, T(java.lang.Math).floor(course.averageRating))}">
+                                    <i class="fas fa-star text-warning"></i>
+                                </li>
+                                <li class="list-inline-item me-0 small"
+                                    th:if="${course.averageRating - T(java.lang.Math).floor(course.averageRating) >= 0.5}">
+                                    <i class="fas fa-star-half-alt text-warning"></i>
+                                </li>
+                                <li class="list-inline-item me-0 small"
+                                    th:each="star : ${#numbers.sequence(1, 5 - T(java.lang.Math).ceil(course.averageRating))}">
+                                    <i class="far fa-star text-warning"></i>
+                                </li>
+                            </th:block>
+                            <li class="list-inline-item ms-2 text-reset"
+                                th:text="'('+ ${course.courseReviews.size()} + ')'">(6,500)</li>
                         </ul>
                         <!-- Divider -->
                         <hr>
                         <!-- Time -->
                         <div class="d-flex justify-content-between align-items-center mb-2">
-                            <h4 class="text-success mb-0">$125</h4>
-                            <span class="h6 fw-light mb-0 me-3"><i class="far fa-clock text-danger me-2"></i>6h
-                                56m</span>
+                            <h4 class="text-success mb-0" th:each="progress : ${progressCourses}"
+                                th:if="${progress.courseId == course.courseId}" th:text="${progress.progress}+ ' %'">
+                                100%</h4>
+                            </h4>
+                            <a th:href="@{/learning/course/view(courseId=${course.courseId})}"
+                                class="btn btn-sm btn-primary-soft mb-0">Continue</a>
                         </div>
                     </div>
                 </div>
             </div>
             <!-- Card END -->
 
-            <!-- Card START -->
-            <div class="col-md-6 col-xl-4">
-                <div class="card shadow-hover overflow-hidden bg-transparent">
-                    <div class="position-relative">
-                        <!-- Image -->
-                        <img class="card-img-top" src="assets/images/courses/4by3/14.jpg" alt="Card image">
-                        <!-- Overlay -->
-                        <div class="bg-overlay bg-dark opacity-4"></div>
-                        <div class="card-img-overlay d-flex align-items-start flex-column">
-                            <!-- Card overlay bottom -->
-                            <div class="w-100 mt-auto d-inline-flex">
-                                <div class="d-flex align-items-center bg-white p-2 rounded-2">
-                                    <!-- Avatar -->
-                                    <div class="avatar avatar-sm me-2">
-                                        <img class="avatar-img rounded-1" src="assets/images/avatar/08.jpg"
-                                            alt="avatar">
-                                    </div>
-                                    <!-- Avatar info -->
-                                    <div>
-                                        <h6 class="mb-0"><a href="#" class="text-dark">Billy Vasquez</a></h6>
-                                        <span class="small">Developer</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Card body -->
-                    <div class="card-body">
-                        <!-- Badge and icon -->
-                        <div class="d-flex justify-content-between mb-3">
-                            <div class="hstack gap-2">
-                                <a href="#" class="badge bg-info bg-opacity-10 text-info">Beginner</a>
-                                <a href="#" class="badge text-bg-dark">8 month</a>
-                            </div>
-                            <a href="#" class="text-danger"><i class="fas fa-bookmark fa-fw"></i></a>
-                        </div>
-                        <!-- Title -->
-                        <h5 class="card-title"><a href="#">Angular – The Complete Guide (2021 Edition)</a></h5>
-                        <!-- Rating -->
-                        <ul class="list-inline">
-                            <li class="list-inline-item h6 fw-light mb-0">4.5</li>
-                            <li class="list-inline-item me-0 small"><i class="fas fa-star text-warning"></i>
-                            </li>
-                            <li class="list-inline-item me-0 small"><i class="fas fa-star text-warning"></i>
-                            </li>
-                            <li class="list-inline-item me-0 small"><i class="fas fa-star text-warning"></i>
-                            </li>
-                            <li class="list-inline-item me-0 small"><i class="fas fa-star text-warning"></i>
-                            </li>
-                            <li class="list-inline-item me-0 small"><i class="fas fa-star-half-alt text-warning"></i>
-                            </li>
-                            <li class="list-inline-item ms-2 text-reset">(5,436)</li>
-                        </ul>
-                        <!-- Divider -->
-                        <hr>
-                        <!-- Time -->
-                        <div class="d-flex justify-content-between align-items-center mb-2">
-                            <h4 class="text-success mb-0">$355</h4>
-                            <span class="h6 fw-light mb-0 me-3"><i class="far fa-clock text-danger me-2"></i>12h
-                                56m</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- Card END -->
 
-            <!-- Card START -->
-            <div class="col-md-6 col-xl-4">
-                <div class="card shadow-hover overflow-hidden bg-transparent">
-                    <div class="position-relative">
-                        <!-- Image -->
-                        <img class="card-img-top" src="assets/images/courses/4by3/21.jpg" alt="Card image">
-                        <!-- Overlay -->
-                        <div class="bg-overlay bg-dark opacity-4"></div>
-                        <div class="card-img-overlay d-flex align-items-start flex-column">
-                            <!-- Card overlay bottom -->
-                            <div class="w-100 mt-auto d-inline-flex">
-                                <div class="d-flex align-items-center bg-white p-2 rounded-2">
-                                    <!-- Avatar -->
-                                    <div class="avatar avatar-sm me-2">
-                                        <img class="avatar-img rounded-1" src="assets/images/avatar/05.jpg"
-                                            alt="avatar">
-                                    </div>
-                                    <!-- Avatar info -->
-                                    <div>
-                                        <h6 class="mb-0"><a href="#" class="text-dark">Lori Stevens</a></h6>
-                                        <span class="small">psychiatrist</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Card body -->
-                    <div class="card-body">
-                        <!-- Badge and icon -->
-                        <div class="d-flex justify-content-between mb-3">
-                            <div class="hstack gap-2">
-                                <a href="#" class="badge bg-info bg-opacity-10 text-info">Beginner</a>
-                                <a href="#" class="badge text-bg-dark">12 month</a>
-                            </div>
-                            <a href="#" class="h6 fw-light mb-0"><i class="far fa-bookmark fa-fw"></i></a>
-                        </div>
-                        <!-- Title -->
-                        <h5 class="card-title"><a href="#">Time Management Mastery: Do More, Stress Less</a>
-                        </h5>
-                        <!-- Rating -->
-                        <ul class="list-inline">
-                            <li class="list-inline-item h6 fw-light mb-0">3.5</li>
-                            <li class="list-inline-item me-0 small"><i class="fas fa-star text-warning"></i>
-                            </li>
-                            <li class="list-inline-item me-0 small"><i class="fas fa-star text-warning"></i>
-                            </li>
-                            <li class="list-inline-item me-0 small"><i class="fas fa-star text-warning"></i>
-                            </li>
-                            <li class="list-inline-item me-0 small"><i class="fas fa-star-half-alt text-warning"></i>
-                            </li>
-                            <li class="list-inline-item me-0 small"><i class="far fa-star text-warning"></i>
-                            </li>
-                            <li class="list-inline-item ms-2 text-reset">(1,254)</li>
-                        </ul>
-                        <!-- Divider -->
-                        <hr>
-                        <!-- Time -->
-                        <div class="d-flex justify-content-between align-items-center mb-2">
-                            <h4 class="text-success mb-0">$280</h4>
-                            <span class="h6 fw-light mb-0 me-3"><i class="far fa-clock text-danger me-2"></i>5h
-                                40m</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- Card END -->
+
         </div>
     </div>
 </section>
